adding a tip display modal commit

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
         
     </div>
 
+    <div id="tip">
+        <p>Click on the date to add task for a particular day <span>x</span></p>
+    </div>
+
     
 </div>
 <script src="jquery-3.4.1.js"></script>
