adding a tip display modal commit

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
 
     <div id="tip">
-        <p>Click on the date to add task for a particular day <span>x</span></p>
+        <p>Click on the date to add task for a particular day <span id="closeTip">x</span></p>
     </div>
 
     
