cleaning up and refactoring index.js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
    
 </head>
 <body>
- 
+
+<!-- <div id="backdrop">
+
+    
+</div> -->
     
 <div class="calendar">
     <div id="firstblock"></div>
